Organisation / add src folder and alias

--- a/src/content/projects/Domap.mdx
+++ b/src/content/projects/Domap.mdx
@@ -6,8 +6,6 @@ url: https://Domap.fr
 published: true
 ---
 
-import TechStack from '../../app/components/techStack';
-
 # Contexte professionnel
 
 J'ai eu l'opportunité d'intégrer **Domap** initialement lors d'un stage et je poursuis actuellement mon parcours professionnel au sein de cette entreprise en tant qu'alternant.
@@ -21,12 +19,16 @@ Domap est une plateforme B2B qui fournit des données open data sur les importat
 Chaque projet nécessite une panoplie d'outils et de technologies pour aboutir à un produit final efficace. Voici une liste des principaux outils et technologies que j'ai utilisés au cours de mon travail sur Domap:
 
 <TechStack technologies={[
-  { logoSrc: '/Icons/nodejs.svg', name: 'Node.js' },
-  { logoSrc: '/Icons/express.svg', name: 'Express.js' },
-  { logoSrc: '/Icons/ejs.svg', name: 'EJS' },
-  { logoSrc: '/Icons/vue.svg', name: 'Vue.js' },
-  { logoSrc: '/Icons/python.svg', name: 'Python' },
-  { logoSrc: '/Icons/mongodb.svg', name: 'MongoDB' },
+  { logoSrc: '/Icons/nodejs.svg', name: 'Node.js', description: 'Environnement d\'exécution JavaScript' },
+  { logoSrc: '/Icons/express.svg', name: 'Express.js', description: 'Framework web pour Node.js' },
+  { logoSrc: '/Icons/ejs.svg', name: 'EJS', description: 'Moteur de template JavaScript' },
+  { logoSrc: '/Icons/vue.svg', name: 'Vue.js', description: 'Framework JavaScript progressif' },
+  { logoSrc: '/Icons/python.svg', name: 'Python', description: 'Langage de programmation' },
+  { logoSrc: '/Icons/mongodb.svg', name: 'MongoDB', description: 'Base de données NoSQL' },
+  { logoSrc: '/Icons/github.svg', name: 'GitHub', description: 'Plateforme de développement collaboratif' },
+  { logoSrc: '/Icons/pm2.svg', name: 'PM2', description: 'Gestionnaire de processus Node.js' },
+  { logoSrc: '/Icons/passport.svg', name: 'Passport.js', description: 'Middleware d\'authentification pour Node.js' },
+  { logoSrc: '/Icons/express-session.svg', name: 'express-session', description: 'Middleware de gestion de session pour Express.js' },
 ]} />
 
 # Mon rôle au sein de Domap
