--- a/src/content/projects/Keploid.mdx
+++ b/src/content/projects/Keploid.mdx
@@ -6,11 +6,11 @@ repository: MacBro0k/Projet-Unity-Advanced
 published: true
 ---
 
-## Introduction
+# Introduction
 
 Keploid est un jeu 2D passionnant de type Metroidvania que j'ai eu l'opportunité de réaliser lors de ma première année de BUT Informatique. Dans ce jeu, vous incarnez un soldat explorant une planète inconnue, Keploid. Notre équipe avait un délai de seulement un mois et demi pour développer ce jeu en utilisant Unity, un défi que nous avons relevé avec enthousiasme.
 
-## L'Équipe
+# L'Équipe
 
 L'équipe était composée de quatre membres dynamiques :
 
@@ -27,11 +27,11 @@ L'équipe était composée de quatre membres dynamiques :
   >Munkhtselmeg KHUVSGULDALAI </a>, notre Pixel Artiste. Il a adapté certains des sprites pour notre jeu en utilisant
   le logiciel Aseprite.
 
-## Notre Approche
+# Notre Approche
 
 J'ai mis en place un système de suivi de projet avec Trello et GitHub pour assurer une gestion fluide du projet et une collaboration efficace entre nous. Nous avons décidé de créer un jeu inspiré des classiques Metroidvania, cherchant à rendre notre gameplay aussi dynamique et varié que possible, malgré le délai limité et notre expérience relativement limitée.
 
-## Les Tâches Techniques
+# Les Tâches Techniques
 
 William s'est occupé de la gestion des Managers dans Unity, des outils clés pour la gestion des divers aspects du jeu.
 
@@ -63,7 +63,7 @@ Parmi nos obligations pour le projet, nous devions inclure des dialogues avec un
   <p class="text-sm">Vidéo montrant des dialogues du jeu et une cinématique</p>
 </div>
 
-## Les Graphiques
+# Les Graphiques
 
 En termes de graphismes, nous avons opté pour un style pixel art. Cependant, n'étant pas des graphistes, nous avons utilisé les ressources d'un artiste sur Patreon, <a href="https://penusbmic.carrd.co/" target="_blank">penusbmic</a>, et sa série "<a href="https://itch.io/c/1748382/all-of-the-dark-series-patreon-tier-2-series-click-here" target="_blank">Dark Series</a>". Munkhtselmeg a adapté certains des sprites pour notre jeu en ajoutant de nouvelles animations, comme une roulade.
 
@@ -99,7 +99,7 @@ En termes de graphismes, nous avons opté pour un style pixel art. Cependant, n'
   <p class="text-sm">Le tileset que nous avons choisi pour notre jeu</p>
 </div>
 
-## Conclusion
+# Conclusion
 
 En somme, ce projet a été un défi incroyable, mais j'en ressors avec une nouvelle appréciation pour le développement de jeux et une meilleure compréhension des contraintes et défis inhérents à ce processus.
 
