Refactor / Techstack update with iconify icons

--- a/src/content/projects/Domap.mdx
+++ b/src/content/projects/Domap.mdx
@@ -19,16 +19,14 @@ Domap est une plateforme B2B qui fournit des données open data sur les importat
 Chaque projet nécessite une panoplie d'outils et de technologies pour aboutir à un produit final efficace. Voici une liste des principaux outils et technologies que j'ai utilisés au cours de mon travail sur Domap:
 
 <TechStack technologies={[
-  { logoSrc: '/Icons/nodejs.svg', name: 'Node.js', description: 'Environnement d\'exécution JavaScript' },
-  { logoSrc: '/Icons/express.svg', name: 'Express.js', description: 'Framework web pour Node.js' },
-  { logoSrc: '/Icons/ejs.svg', name: 'EJS', description: 'Moteur de template JavaScript' },
-  { logoSrc: '/Icons/vue.svg', name: 'Vue.js', description: 'Framework JavaScript progressif' },
-  { logoSrc: '/Icons/python.svg', name: 'Python', description: 'Langage de programmation' },
-  { logoSrc: '/Icons/mongodb.svg', name: 'MongoDB', description: 'Base de données NoSQL' },
-  { logoSrc: '/Icons/github.svg', name: 'GitHub', description: 'Plateforme de développement collaboratif' },
-  { logoSrc: '/Icons/pm2.svg', name: 'PM2', description: 'Gestionnaire de processus Node.js' },
-  { logoSrc: '/Icons/passport.svg', name: 'Passport.js', description: 'Middleware d\'authentification pour Node.js' },
-  { logoSrc: '/Icons/express-session.svg', name: 'express-session', description: 'Middleware de gestion de session pour Express.js' },
+  { logo: 'logos-nodejs-icon', name: 'Node.js', description: "Node.js est un environnement d\'exécution JavaScript côté serveur, essentiel pour construire des applications web rapides et évolutives." },
+  { logo: 'custom-express', name: 'Express.js', description: "Express.js est un framework web minimaliste et flexible pour Node.js, facilitant la création d'applications web et d'API." },
+  { logo: 'custom-ejs', name: 'EJS', description: "EJS est un moteur de template JavaScript, utilisé pour générer du HTML dynamique côté serveur avec une syntaxe simple et efficace." },
+  { logo: 'logos-vue', name: 'Vue.js', description: "Vue.js est un framework JavaScript progressif pour construire des interfaces utilisateur interactives et réactives." },
+  { logo: 'logos-python', name: 'Python', description: "Python, avec sa syntaxe claire et sa puissance, est utilisé pour le scripting et l'automatisation de diverses tâches backend." },
+  { logo: 'logos-mongodb-icon', name: 'MongoDB', description: "MongoDB, une base de données NoSQL orientée document, offre une flexibilité et une évolutivité optimales pour le stockage de données." },
+  { logo: 'logos-github-icon', name: 'GitHub', description: "GitHub est une plateforme de développement collaboratif, utilisée pour le versionnage et la gestion efficace du code source." },
+  { logo: 'logos-passport', name: 'Passport.js', description: "Passport.js est un middleware d\'authentification pour Node.js, garantissant une sécurisation robuste des sessions utilisateurs." },
 ]} />
 
 # Mon rôle au sein de Domap
