Update / Add techStack

--- a/src/content/projects/Keploid.mdx
+++ b/src/content/projects/Keploid.mdx
@@ -27,6 +27,15 @@ L'équipe était composée de quatre membres dynamiques :
   >Munkhtselmeg KHUVSGULDALAI </a>, notre Pixel Artiste. Il a adapté certains des sprites pour notre jeu en utilisant
   le logiciel Aseprite.
 
+## Outils & Technologies Utilisés
+
+<TechStack technologies={[
+  { logo: 'logos-unity', name: 'Unity', description: "Unity est un moteur de jeu qui peut gérer de la 2D." },
+  { logo: 'devicon-csharp', name: 'C#', description: "Langage de programmation principal utilisé pour le développement sur unity." },
+  { logo: 'logos-github', name: 'GitHub', description: "GitHub est une plateforme de développement collaboratif, utilisée pour le versionnage et la gestion efficace du code source." },
+  { logo: 'logos-trello', name: 'Trello', description: "Application utiliser pour gérer les taches et l'évolution du projet." },
+]} />
+
 # Notre Approche
 
 J'ai mis en place un système de suivi de projet avec Trello et GitHub pour assurer une gestion fluide du projet et une collaboration efficace entre nous. Nous avons décidé de créer un jeu inspiré des classiques Metroidvania, cherchant à rendre notre gameplay aussi dynamique et varié que possible, malgré le délai limité et notre expérience relativement limitée.
